# circomference

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
benchmarks/circom-pairing-743d761/: opt_simple_swu2.circom
cvc5/cmake/: FindCoCoA.cmake
src/: cvc5  cvc5_lib.rs  main.rs  z3_lib.rs
tests/: BigIsZero.circom  BigIsZero.r1cs  BigIsZero.sym  CompConstant@compconstant.r1cs  Decoder@multiplexer.r1cs  EscalarMulAny@escalarmulany.r1cs  EscalarMulAny@escalarmulany.sym  GreaterThan@comparators.r1cs  Num2Bits.circom  Num2Bits.r1cs  Poseidon.circom  Poseidon.r1cs  TriviallyDeterministic.circom  TriviallyDeterministic.r1cs  is_zero_insecure.circom  is_zero_insecure.r1cs  is_zero_insecure.sym  monty.circom  monty.r1cs  multiplier.circom  multiplier_insecure.circom  sqrt.circom  sqrt.r1cs  vkintegrity.circom  vkintegrity.r1cs
